# server/routes/castelsRouter.js
@@ -7,4 +7,7 @@ var castels_controller = require('../controllers/castelsController');
 // GET request list user.
 router.get('/', castels_controller.list);
 
+// GET request list user.
+router.get('/:castelId', castels_controller.get);
+
 module.exports = router;
